--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="add-btn" class="btn btn-danger input-group-text">Add Items</button>
           </div>
 
-          <div class="mt-5">
+          <div class="mt-5 shadow-lg">
             <table class="table">
                 <thead>
                   <tr>
