Add clear button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 </tbody>
               </table>
           </div>
+
+          <div>
+            <button id="clear" class="btn btn-warning">Clear All XXX</button>
+          </div>
     </div>
     <script src="project.js"></script>
 </body>
